syntax = "proto3";

package relationships.v1;

import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "relationships/v1/common.proto";
import "relationships/v1/relationship_types.proto";

option go_package = "github.com/tonytheleg/relationship-api/api/relationships;relationships";
option java_multiple_files = true;
option java_package = "api.relationships";

message CreateRelationshipRequest {
  Metadata metadata = 1;

  IsPropogatedTo is_propagated_to = 2;

  RegisteredTo is_registered_to = 3;

}

message CreateRelationshipResponse {}

message UpdateRelationshipRequest {
  Metadata metadata = 1;

  IsPropogatedTo is_propagated_to = 2;


  RegisteredTo is_registered_to = 3;
}

message UpdateRelationshipResponse {}

message DeleteRelationshipRequest {
  Metadata metadata = 1;

  IsPropogatedTo is_propagated_to = 2;

  RegisteredTo is_registered_to = 3;
}

message DeleteRelationshipResponse {}

service KesselRelationshipservice {
  rpc CreateRelationship(CreateRelationshipRequest) returns (CreateRelationshipResponse) {
    option (google.api.http) = {
      post : "/api/v1/relationships"
      body : "*"
    };
  };

  rpc UpdateRelationship(UpdateRelationshipRequest) returns (UpdateRelationshipResponse) {
    option (google.api.http) = {
      put : "/api/v1/relationships"
      body : "*"
    };
  };

  rpc DeleteRelationship(DeleteRelationshipRequest) returns (DeleteRelationshipResponse) {
    option (google.api.http) = {
      delete : "/api/v1/relationships"
      body : "*"
    };
  };
}
